# impress-odoo

./: .copier-answers.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  README.md
.github/: test.yml
TestPatchingShopFloor/: __manifest__.py
audit_reports/: __manifest__.py
documents_archive/: __manifest__.py
emails/: SO-confirmation.html
impress-barcode/: __manifest__.py
impress_account_report/: __manifest__.py
impress_accounting/: __manifest__.py
impress_accounting_customizations/: __manifest__.py
impress_barcode/: __manifest__.py
impress_billback/: __manifest__.py
impress_check_customizations/: __manifest__.py
impress_cleaning/: __manifest__.py
impress_datetime_widget/: __manifest__.py
impress_deposit/: __manifest__.py
impress_expiration_lot/: __manifest__.py
impress_lot_lab/: __manifest__.py
impress_maintenance/: __manifest__.py
impress_maintenance_consume_stock/: __manifest__.py
impress_maintenance_quality_mgmt/: __manifest__.py
impress_maintenance_worksheets/: __manifest__.py
impress_manufacturing_customizations/: __manifest__.py
impress_prevent_workorder_bo/: __manifest__.py
impress_production_billing/: __manifest__.py
impress_project_billing_production/: __manifest__.py
impress_purchase_customizations/: __manifest__.py
impress_qc_on_demand/: __init__.py  __manifest__.py
impress_qc_on_demand_mrp/: __manifest__.py
impress_qc_on_demand_shop_floor/: __manifest__.py
impress_quality_customizations/: __manifest__.py
impress_quality_logs/: __manifest__.py
impress_quality_worksheets/: __manifest__.py  diagram.uxf
impress_sales_customizations/: __manifest__.py
impress_stock_customizations/: __manifest__.py
impress_stock_worksheets/: __manifest__.py
julian_sequence/: __manifest__.py
maintenance_consume_stock/: __manifest__.py
maintenance_documents/: __manifest__.py
maintenance_product/: __manifest__.py
maintenance_quality/: __manifest__.py
maintenance_remove_description_copy/: __manifest__.py
mrp_add_qc_note_shop_floor/: __manifest__.py
mrp_fast_allocation/: __manifest__.py
production_log_note/: __manifest__.py
setup/_metapackage/: pyproject.toml
shop_floor_show_manual_qc/: __manifest__.py
warehouse_billing/: README.rst  __init__.py  (+1 more)
(+399 files in other folders)
